<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/ll_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="2dp"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subject"
            android:textColor="#000000"
            android:textSize="15dp" />

        <Spinner
            android:id="@+id/sp_subjects"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_class_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_subject"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="3dp"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timing"
            android:textColor="#000000"
            android:textSize="15dp" />

        <Spinner
            android:id="@+id/sp_class_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_days_of_work"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_class_time"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/days_of_week"
            android:textColor="#000000"
            android:textSize="15sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_days_of_work_selection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_days_of_work"
        android:layout_margin="3dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/m"
            android:textColor="#000000" />

        <CheckBox
            android:id="@+id/cb_t"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t"
            android:textColor="#000000" />

        <CheckBox
            android:id="@+id/cb_w"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/w"
            android:textColor="#000000" />

        <CheckBox
            android:id="@+id/cb_th"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/th"
            android:textColor="#000000" />

        <CheckBox
            android:id="@+id/cb_f"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/f"
            android:textColor="#000000" />

        <CheckBox
            android:id="@+id/cb_s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s"
            android:textColor="#000000" />

        <CheckBox
            android:id="@+id/cb_su"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/su"
            android:textColor="#000000" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_days_of_work_selection"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duration"
            android:textSize="15sp"
            android:textColor="#000000" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_duration_selection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_duration"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="8">

            <TextView
                android:id="@+id/tv_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from"
                android:textColor="#000000"
                android:textSize="18dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_date_from_dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/select"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:textSize="18dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#000000"></LinearLayout>
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="8">

            <TextView
                android:id="@+id/tv_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:textColor="#000000"
                android:textSize="18dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_date_to_dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/select"
                    android:textColor="#000000"
                    android:textSize="18dp"
                    android:gravity="center"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#000000"></LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_duration_selection"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="2dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="8">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/location"
                android:textColor="#000000"
                android:textSize="18sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="8">

            <EditText
                android:id="@+id/et_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                android:gravity="center"/>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_mentor_for"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_location"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="8">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/mentor_for"
                android:textColor="#000000"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="8">

            <Spinner
                android:id="@+id/sp_mentor_for"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

    <RadioGroup
        android:id="@+id/rg_payment_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_mentor_for"
        android:checkedButton="@+id/rb_pay_now"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rb_pay_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pay_now" />

        <RadioButton
            android:id="@+id/pay_personally"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personally" />
    </RadioGroup>

    <Button
        android:id="@+id/b_proceed_to_payment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/check_availability" />


</RelativeLayout>