<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/days"
        android:textColor="#000000"
        android:textSize="20dp" />

    <LinearLayout
        android:id="@+id/ll_day1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_days"
        android:layout_marginLeft="15dp"

        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_mon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mon" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_day2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_day1"
        android:layout_marginLeft="15dp"

        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_tue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tue" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_day3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_day2"
        android:layout_marginLeft="15dp"

        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_wed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wed" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_day4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_day3"
        android:layout_marginLeft="15dp"

        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_thur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thur" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_day5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_day4"
        android:layout_marginLeft="15dp"

        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_fri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fri" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_day6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_day5"
        android:layout_marginLeft="15dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_sat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sat" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_day7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_day6"
        android:layout_marginLeft="15dp"

        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_sun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sun" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_time_from"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_day7"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from"
                android:textColor="#000000"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_slot_start_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:hint="@string/start_time" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#000000"></LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="@string/to"
                android:textColor="#000000"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_slot_stop_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/stop_time" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#000000"></LinearLayout>
            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_time_from"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/starting_from"
            android:textColor="#000000"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_slot_start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/pick_date" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000000"></LinearLayout>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_stop_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_date"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/till"
            android:textColor="#000000"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_slot_till_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/pick_date" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000000"></LinearLayout>
        </LinearLayout>


    </LinearLayout>

    <EditText
        android:layout_marginTop="15dp"
        android:id="@+id/et_vacation_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="150"
        android:textSize="20sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/schedule_vacation_note"
        android:gravity="center_horizontal"
        android:layout_below="@+id/ll_stop_date"/>


    <Button
        android:id="@+id/b_schedule_vacation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/schedule" />


</RelativeLayout>