<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <AutoCompleteTextView
        android:id="@+id/auto_tv_location"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:background="@drawable/custom_edittext"
        android:gravity="center"
        android:hint="@string/loc"
        android:inputType="textAutoComplete"
        android:padding="4dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/auto_tv_location"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/b_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="0.5"
            android:text="@string/ok" />

        <Button
            android:id="@+id/b_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="0.5"
            android:text="@string/cancel" />
    </LinearLayout>


</RelativeLayout>